--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
         "@popperjs/core": "^2.10.2",
+        "autoprefixer": "^10.4.11",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
         "browser-sync": "^2.27.10",
         "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.16",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-refresh": "^0.14.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "tailwindcss": "^3.1.8"
     },
     "dependencies": {
         "@babel/preset-react": "^7.18.6",
