--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
         "@babel/preset-react": "^7.18.6",
         "@types/react": "^18.0.19",
         "@types/react-dom": "^18.0.6",
+        "antd": "^4.23.1",
         "react-router-dom": "^6.3.0",
+        "swr": "^1.3.0",
         "ts-loader": "^9.3.1",
         "typescript": "^4.8.3"
     }
