--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:fHxjnaDMBNLdwRzcA134n3+VfRNQVhULPwgAkWgnV6Y=
 APP_DEBUG=true
 APP_URL=http://localhost
+SANCTUM_STATEFUL_DOMAINS=localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -13,7 +14,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel_react
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
